@@ -6,6 +6,7 @@ FEATURES:
 	- ip-freebind: yesno option in nsd.conf sets IP_FREEBIND socket option
 	  for Linux, binds to interfaces and addresses that are down.
 BUG FIXES:
+	- Fix for openssl 1.1.0, HMAC_CTX size not exported from openssl.
 
 
 4.1.9
